--- a/index.html
+++ b/index.html
@@ -1415,14 +1415,14 @@
 							<tr class="table-warning">
 								<td><strong>Distribution</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.csv" target="_blank">Download CSV</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS1/Discrimination_in_the_EU_sp535_volumeA.json" target="_blank">Dowload JSON</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS1/Discrimination%20in%20the%20EU_sp535_volumeA.csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS1/Discrimination%20in%20the%20EU_sp535_volumeA.json" target="_blank">Dowload JSON</a>
 								</td>
 							</tr>
 							<tr>
 								<td><strong>RDF assertion</strong></td>
 								<td>
-									<a href="metadata/DS1.ttl" target="_blank">Download DS1.ttl</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS1.ttl" target="_blank">Download DS1.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
@@ -1456,13 +1456,13 @@
 							<tr>
 								<td><strong>Source</strong></td>
 								<td>
-									<a href="https://fra.europa.eu/en/publications-and-resources/data-and-maps/2024/eu-lgbtiq-survey-iii">European Union Agency for Fundamental Rights - EU LGBTIQ Survey III</a>
+									<a href="https://fra.europa.eu/en/publications-and-resources/data-and-maps/2024/eu-lgbtiq-survey-iii" target="_blank">European Union Agency for Fundamental Rights - EU LGBTIQ Survey III</a>
 								</td>
 							</tr>
 							<tr class="table-success">
 								<td><strong>Landing page</strong></td>
 								<td>
-									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/" target="_blank">Digital Ethics Across Europe</a>
 								</td>
 							</tr>
 							<tr>
@@ -1476,7 +1476,7 @@
 							<tr>
 								<td><strong>Licence</strong></td>
 								<td>
-									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+									<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
 								</td>
 							</tr>
 							<tr class="table-success">
@@ -1486,15 +1486,15 @@
 							<tr>
 								<td><strong>Themes</strong></td>
 								<td>
-									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
-									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI" target="_blank">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST" target="_blank">Justice, legal system and public safety</a>
 								</td>
 							</tr>
 							<tr class="table-success">
 								<td><strong>Subjects</strong></td>
 								<td>
-									<a href="http://eurovoc.europa.eu/6231">Discrimination based on sexual oriantation</a>,
-									<a href="http://eurovoc.europa.eu/538">Fundamental rights</a>
+									<a href="http://eurovoc.europa.eu/6231" target="_blank">Discrimination based on sexual oriantation</a>,
+									<a href="http://eurovoc.europa.eu/538" target="_blank">Fundamental rights</a>
 								</td>
 							</tr>
 							<tr>
@@ -1504,14 +1504,14 @@
 							<tr class="table-success">
 								<td><strong>Distribution</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS2/discrimination.csv">Download CSV</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS2/discrimination.json">Dowload JSON</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS2/discrimination.csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS2/discrimination.json" target="_blank">Dowload JSON</a>
 								</td>
 							</tr>
 							<tr>
 								<td><strong>RDF assertion</strong></td>
 								<td>
-									<a href="metadata/DS2.ttl" download="DS2.ttl">Download DS2.ttl</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS2.ttl" target="_blank">Download DS2.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
@@ -1531,7 +1531,7 @@
 							</tr>
 							<tr class="table-primary">
 								<td><strong>Creator</strong></td>
-								<td>.......</td>
+								<td>Alisha Carol Hiscox</td>
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
@@ -1544,13 +1544,13 @@
 							<tr>
 								<td><strong>Source</strong></td>
 								<td>
-									<a href="https://rainbowmap.ilga-europe.org/categories/family/">Rainbow Map</a>
+									<a href="https://rainbowmap.ilga-europe.org/categories/family/" target="_blank">Rainbow Map</a>
 								</td>
 							</tr>
 							<tr class="table-primary">
 								<td><strong>Landing page</strong></td>
 								<td>
-									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/" target="_blank">Digital Ethics Across Europe</a>
 								</td>
 							</tr>
 							<tr>
@@ -1564,7 +1564,7 @@
 							<tr>
 								<td><strong>Licence</strong></td>
 								<td>
-									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+									<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
 								</td>
 							</tr>
 							<tr class="table-primary">
@@ -1574,16 +1574,16 @@
 							<tr>
 								<td><strong>Themes</strong></td>
 								<td>
-									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
-									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI" target="_blank">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST" target="_blank">Justice, legal system and public safety</a>
 								</td>
 							</tr>
 							<tr class="table-primary">
 								<td><strong>Subjects</strong></td>
 								<td>
-									<a href="http://eurovoc.europa.eu/c_25d12753">Rainbow families</a>,
-									<a href="http://eurovoc.europa.eu/1818">Marriage</a>,
-									<a href="http://eurovoc.europa.eu/688">Equal treatement</a>
+									<a href="http://eurovoc.europa.eu/c_25d12753" target="_blank">Rainbow families</a>,
+									<a href="http://eurovoc.europa.eu/1818" target="_blank">Marriage</a>,
+									<a href="http://eurovoc.europa.eu/688" target="_blank">Equal treatement</a>
 								</td>
 							</tr>
 							<tr>
@@ -1593,14 +1593,14 @@
 							<tr class="table-primary">
 								<td><strong>Distribution</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/...........csv">Download CSV</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/............json">Dowload JSON</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/...........csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/............json" target="_blank">Dowload JSON</a>
 								</td>
 							</tr>
 							<tr>
 								<td><strong>RDF assertion</strong></td>
 								<td>
-									<a href="metadata/DS3.ttl" download="DS3.ttl">Download DS3.ttl</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS3.ttl"  target="_blank">Download DS3.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
@@ -1634,13 +1634,13 @@
 							<tr>
 								<td><strong>Source</strong></td>
 								<td>
-									<a href="https://www.lawsandfamilies.eu/en/legal-project/interactive-database/">Database Laws and Families</a>
+									<a href="https://www.lawsandfamilies.eu/en/legal-project/interactive-database/" target="_blank">Database Laws and Families</a>
 								</td>
 							</tr>
 							<tr class="table-purple">
 								<td><strong>Landing page</strong></td>
 								<td>
-									<a href="https://digital-ethics-across-europe.github.io/DEAE/">Digital Ethics Across Europe</a>
+									<a href="https://digital-ethics-across-europe.github.io/DEAE/" target="_blank">Digital Ethics Across Europe</a>
 								</td>
 							</tr>
 							<tr>
@@ -1654,7 +1654,7 @@
 							<tr>
 								<td><strong>Licence</strong></td>
 								<td>
-									<a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
+									<a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
 								</td>
 							</tr>
 							<tr class="table-purple">
@@ -1664,16 +1664,16 @@
 							<tr>
 								<td><strong>Themes</strong></td>
 								<td>
-									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI">Population and society</a>,
-									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST">Justice, legal system and public safety</a>
+									<a href="http://publications.europa.eu/resource/authority/data-theme/SOCI" target="_blank">Population and society</a>,
+									<a href="http://publications.europa.eu/resource/authority/data-theme/JUST" target="_blank">Justice, legal system and public safety</a>
 								</td>
 							</tr>
 							<tr class="table-purple">
 								<td><strong>Subjects</strong></td>
 								<td>
-									<a href="http://eurovoc.europa.eu/c_25d12753">Rainbow families</a>,
-									<a href="http://eurovoc.europa.eu/1818">Marriage</a>,
-									<a href="http://eurovoc.europa.eu/688">Equal treatement</a>
+									<a href="http://eurovoc.europa.eu/c_25d12753" target="_blank">Rainbow families</a>,
+									<a href="http://eurovoc.europa.eu/1818" target="_blank">Marriage</a>,
+									<a href="http://eurovoc.europa.eu/688" target="_blank">Equal treatement</a>
 								</td>
 							</tr>
 							<tr>
@@ -1683,14 +1683,14 @@
 							<tr class="table-purple">
 								<td><strong>Distribution</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/...........csv">Download CSV</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/............json">Dowload JSON</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/...........csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/............json" target="_blank">Dowload JSON</a>
 								</td>
 							</tr>
 							<tr>
 								<td><strong>RDF assertion</strong></td>
 								<td>
-									<a href="metadata/DS4.ttl" download="DS4.ttl">Download DS4.ttl</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DS4.ttl" target="_blank">Download DS4.ttl</a>
 								</td>
 							</tr>
 					    </tbody>
