--- a/index.html
+++ b/index.html
@@ -1594,8 +1594,8 @@
 							<tr class="table-primary">
 								<td><strong>Distribution</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/...........csv" target="_blank">Download CSV</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS3/............json" target="_blank">Dowload JSON</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS3/marriage_and_parenting_2024.csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS3/marriage_and_parenting_2024.json" target="_blank">Dowload JSON</a>
 								</td>
 							</tr>
 							<tr>
@@ -1684,8 +1684,8 @@
 							<tr class="table-purple">
 								<td><strong>Distribution</strong></td>
 								<td>
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/...........csv" target="_blank">Download CSV</a>,
-									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/data/DS4/............json" target="_blank">Dowload JSON</a>
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS4/marriage_and_parenting_1989_2016.csv" target="_blank">Download CSV</a>,
+									<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/data/DS4/marriage_and_parenting_1989_2016.json" target="_blank">Dowload JSON</a>
 								</td>
 							</tr>
 							<tr>
