--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 				</div>
 				<div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
 					<h3>Legal Analysis</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+					<p>Legal analysis was carried out following an legal checklist that provides questions to evaluate datasets' privacy, property rigths, licences, limitations on public acess, economicalc conditions and temporary aspects.
 					</p>
 				   <div class="accordion" id="accordionLegal">
 						<div class="accordion-item">
@@ -1128,7 +1128,7 @@
 							  </button>
 						  <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
 							<div class="accordion-body" >
-							  <table class="table">
+							  <table class="table" id="equality-table">
 								<tr class="table-success">
 									<th></th>
 									<td><strong>Discrimination in the EU</strong></td>
