small changes to visualisation

--- a/index.html
+++ b/index.html
@@ -1722,11 +1722,11 @@
 	</diV>
 	<div  id="VisualizationDiscrimination" class="content">
 		<div class="chart-div" id="barchart1">
-			<div class="bar-div" style="width: 1000px; height: 600px;">
-				<canvas id="discrimination-chart"></canvas>
+			<div class="bar-div" >
+				<canvas id="discrimination-chart" style="width: 500px; height: 200px;"></canvas>
 			</div>
 			
-			<div class="control-row" style="margin-bottom: 20px;">
+			<div class="control-row">
 			  <select class="countrydata2" id="discrimination-select">
 				<option value="discriminationLastTwelveMonths">Discrimination felt in the last twelve months</option>
 				<option value="discriminationEmployement">Discrimination in employment</option>
@@ -1735,12 +1735,13 @@
 			  </select>
 			</div>
 		</div>
+		<hr>
 		<div class="chart-div" id="barchart2">
-			<div class="bar-div" style="width: 1000px; height: 600px;">
-				<canvas id="public-opinion-chart"></canvas>
+			<div class="bar-div" >
+				<canvas id="public-opinion-chart" style="width: 1000px; height: 400px;"></canvas>
 			</div>
 		
-			<div class="control-row" style="margin-bottom: 80px;">
+			<div class="control-row">
 			  <select class="countrydata2" id="public-opinion-select">
 				<option value="discriminationSexualOrientation">In your opinion how widespread is discrimination lesbian, gay and bisexual people in your country?</option>
 				<option value="discriminationTransgender">In your opinion how widespread is discrimination against transgender people in your country?'</option>
@@ -2038,21 +2039,14 @@
 </main>
 </body>
 <footer>
-<img src="imgs/logo.png" alt="logo">
 <div class="right">
 	<p><strong>Digital Ethics Across Europe (DEAE) </strong>is an end-of-course project for the exam <em>Open Access and Digital Ethics</em>, held by Prof Palmirani at University of Bologna in a.y. 2022/2023</p>
 	<p>The project was carried out by Valentina Bertelli, Giorgia Umana, Alisha Carol Hiscox, and Lukas Firantas</p>
 	<div class="links">
-		<a href="aboutus.html">About Us</a>
 		<a href="documentation.html">Documentation</a>
-		<a href="disclamer.html">Disclaimer</a>
-		
+		<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE">Github</a>
 	</div>
-	<div class="social">
-		
-		<a href="https://github.com/House-Of-Design/HouseOfDesign">Github</a>
 	</div>
-	
 </div>
 </footer>
 
