--- a/index.html
+++ b/index.html
@@ -1258,8 +1258,11 @@
         
         <div class="content" id="sixthSection">
 			<h2>Catalogue and metadata</h2>
-			<p>Our catalog and the final datasets have been thoroughly described with metadata from the <a href="https://www.w3.org/TR/vocab-dcat-3/">DCAT-AP</a> vocabulary, a metadata schema designed specifically to facilitate interoperability between data catalogues published on the Web. The RDF assertion of metadata has been carried out to further enhance interoperability, and the resulting Turtle output for the entire catalog and individual datasets is linked in the following table. A Turtle file containing all the metadata can be found <a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DEAE_metadata.ttl">here</a>.
-				<br><a href="https://op.europa.eu/en/web/eu-vocabularies">EU contolled vocabularies</a>, such as EuroVoc, were used to define themes and subjects to allign our catalogue compliant to EU standrads.    
+			<p>All datasets and the catalogue itself have been described with machine-readable metadata, following the <a href="https://interoperable-europe.ec.europa.eu/collection/semantic-interoperability-community-semic/solution/dcat-application-profile-implementation-guidelines">DCAT Application profile for data portals in Europe (DCAT-AP)</a>, a specification based on the <a href="https://www.w3.org/TR/vocab-dcat-3/">Data Catalog Vocabulary (DCAT)</a> for describing public sector datasets in Europe.
+			</p>
+			<p>The <em>RDF assertion</em> of metadata has been carried out to further enhance interoperability, and the resulting <em>Turtle</em> output for the entire catalog and individual datasets is linked in the following table. A Turtle file containing all the metadata can be found <a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/metadata/DEAE_metadata.ttl">here</a>.
+		    </p>
+			<p>Controlled vocabularies were used to ensure coherence and adherence to EU themes classification standards: catalogue’s themes are defined with terms from the <a href="https://op.europa.eu/en/web/eu-vocabularies/dataset/-/resource?uri=http://publications.europa.eu/resource/dataset/data-theme">MDR data themes vocabulary</a>, while subjects are described using keywords from <a href="https://eur-lex.europa.eu/browse/eurovoc.html?locale=it">EuroVoc</a>, EU’s multidisciplinary thesaurus.    
 			</p>
 			<div class="nav nav-tabs" id="nav-tab" role="tablist">
 				  <button class="nav-link active" id="nav-catalogue-tab-metadata" data-bs-toggle="tab" data-bs-target="#nav-catalogue" type="button" role="tab" aria-controls="nav-catalogue" aria-selected="true">Catalogue</button>
@@ -2032,6 +2035,13 @@
         <h3>Conclusion</h3>
         <p>By integrating the <b>LawsandFamilies Database</b>, <b>Rainbow Map</b>, <b>EU LGBTIQ Survey III</b>, and the <b>Discrimination in the European Union Survey</b>, this analysis not only highlights disparities in LGBTQ rights and discrimination across Europe but also promotes sustainable practices in open data usage. The accessibility, ongoing updates, and complementary insights from these datasets enable long-term contributions to data-driven advocacy, policy-making, and public awareness, creating a foundation for lasting social impact.</p>
 	
+	</div>
+	<div id="ninthSection">
+		<h2>Licences and credits</h2>
+        <p><em>Cover image:</em> <a href="https://inkscape.org/">Inkscape</a>, <a href="https://inkscape.org/it/about/license/">custom licence</a></p>
+		<p><em>Charts:</em><a href="https://www.chartjs.org/docs/2.9.4/notes/license.html">Chart.js</a>, open source and available under the <a href="https://opensource.org/license/MIT">MIT license</a></p>
+		<p><em>Source datasets: </em> <a href="https://creativecommons.org/licenses/by/3.0/it/deed.it">CC BY 3.0</a></p>
+        <p><em>DEAE datasets: </em> <a href="https://creativecommons.org/licenses/by/4.0/deed.it">CC BY 4.0</a></p> 
 	</div>
 
 
