--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 					  <a class="dropdown-item" href="#visualisationIntro">Visualization</a>				
 					  <a class="dropdown-item" href="#seventhSection">About us</a>
 					  <a class="dropdown-item" href="#eigthSection">Sustainability of the Open Data Analysis</a>
+					  <a class="dropdown-item" href="#ninthSection">Licences and credits</a>
 					</div>
 				  </div>
 				
