--- a/index.html
+++ b/index.html
@@ -2037,7 +2037,7 @@
         <p>By integrating the <b>LawsandFamilies Database</b>, <b>Rainbow Map</b>, <b>EU LGBTIQ Survey III</b>, and the <b>Discrimination in the European Union Survey</b>, this analysis not only highlights disparities in LGBTQ rights and discrimination across Europe but also promotes sustainable practices in open data usage. The accessibility, ongoing updates, and complementary insights from these datasets enable long-term contributions to data-driven advocacy, policy-making, and public awareness, creating a foundation for lasting social impact.</p>
 	
 	</div>
-	<div id="ninthSection">
+	<div class="content" id="ninthSection">
 		<h2>Licences and credits</h2>
         <p><em>Cover image:</em> <a href="https://inkscape.org/">Inkscape</a>, <a href="https://inkscape.org/it/about/license/">custom licence</a></p>
 		<p><em>Charts:</em><a href="https://www.chartjs.org/docs/2.9.4/notes/license.html">Chart.js</a>, open source and available under the <a href="https://opensource.org/license/MIT">MIT license</a></p>
