--- a/index.html
+++ b/index.html
@@ -2054,7 +2054,7 @@
 	<p><strong>Digital Ethics Across Europe (DEAE) </strong>is an end-of-course project for the exam <em>Open Access and Digital Ethics</em>, held by Prof Palmirani at University of Bologna in a.y. 2022/2023</p>
 	<p>The project was carried out by Valentina Bertelli, Giorgia Umana, Alisha Carol Hiscox, and Lukas Firantas</p>
 	<div class="links">
-		<a href="documentation.html">Documentation</a>
+		<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE/blob/main/DEAE_Documentation.pdf">Documentation</a>
 		<a href="https://github.com/Digital-Ethics-Across-Europe/DEAE">Github</a>
 	</div>
 	</div>
