--- a/index.html
+++ b/index.html
@@ -1993,50 +1993,61 @@
 			inequalities faced by marginalized communities and  potentially contribute to building a more equitable digital and social landscape.</p>
 	</div>
 
-	<div><p> <br> </p></div>
 	<div class="content" id="eigthSection">
 		<h2>Sustainability of the Open Data Analysis</h2>
-		<p>The sustainability of our analysis lies in the continued accessibility, relevance, and responsible use of the datasets employed. By examining the experiences of LGBTQ individuals across Europe through datasets from the LawsandFamilies Database, the Rainbow Map by ILGA-Europe, the EU LGBTIQ Survey III, and the Discrimination in the European Union Survey (Eurobarometer), we offer a robust analysis of discrimination disparities between Eastern and Western Europe. This section outlines how these datasets contribute to long-term societal, policy, and data sustainability goals.</p>
-		<p><br></p>
-
-		<h3>1. Relevance and Longevity of the Datasets</h3>
-		<p>The selected datasets provide complementary perspectives on LGBTQ rights, legal frameworks, and social attitudes:</p>
-        <ul>
-         <li><b>LawsandFamilies Database:</b> A legal reference capturing variations in family and equality laws across Europe, facilitating longitudinal analysis of legal progress or stagnation.</li>
-    	 <li><b>Rainbow Map (ILGA-Europe):</b> A dynamic scoring system updated annually, offering a clear comparative view of LGBTQ rights protections across countries, ensuring consistent and long-term relevance.</li>
-    	 <li><b>EU LGBTIQ Survey III:</b> By collecting first-hand accounts of discrimination and societal attitudes, this dataset bridges the gap between legal provisions and lived realities, offering insights into regional disparities.</li>
-    	 <li><b>Discrimination in the European Union Survey (Eurobarometer):</b> This dataset provides valuable context on societal perceptions and attitudes towards discrimination across Europe, including LGBTQ discrimination, supplementing the other datasets with a broader societal lens.</li>
-        </ul>
-        <p>Together, these datasets support sustainable open data practices by maintaining transparent methodologies, regular updates, and open accessibility to researchers, policymakers, and advocates.</p>
-
-        <h3>2. Social Sustainability: Advancing Inclusive Policies</h3>
-        <p>The project underscores how open data can drive evidence-based policymaking to combat discrimination. By comparing Eastern and Western Europe, we highlight disparities that demand attention:</p>
-        <ul>
-          <li><b>Eastern Europe:</b> Data from the Rainbow Map and EU LGBTIQ Survey III indicate lower legal protections and higher reported discrimination rates. These findings align with Eurobarometer data, which reflects less societal acceptance in many Eastern European countries.</li>
-          <li><b>Western Europe:</b> Higher Rainbow Map scores and more positive societal perceptions in the Eurobarometer data suggest stronger legal protections and greater societal acceptance, serving as benchmarks for improvement.</li>
-        </ul>
-        <p>This alignment across multiple datasets strengthens the case for targeted reforms and inclusive policies, contributing to long-term social sustainability by fostering equality and reducing discrimination.</p>
-
-        <h3>3. Technological and Ethical Sustainability</h3>
-        <p>The project adheres to best practices for open data use, ensuring technological and ethical sustainability:</p>
-        <ul>
-          <li><b>Transparency and Replicability:</b> All data sources and analytical processes are documented, enabling others to replicate and expand on our findings.</li>
-    	  <li><b>Privacy Protection:</b> Sensitive datasets, such as the EU LGBTIQ Survey III, are used in compliance with privacy-by-design principles, ensuring that individual responses remain anonymized and securely managed.</li>
-        </ul>
-        <p>By responsibly leveraging open data, the project upholds ethical standards while ensuring its methods and findings are sustainable for future use.</p>
-
-        <h3>4. Environmental Sustainability in Data Use</h3>
-        <p>While not directly tied to the datasets, we minimized our environmental footprint during the analysis by:</p>
-        <ul>
-	     <li>Employing digital tools for data analysis and visualization.</li>
-	     <li>Sharing findings through digital platforms rather than printed materials.</li>
-        </ul>
-
-		<p><br></p>
-        <h3>Conclusion</h3>
-        <p>By integrating the <b>LawsandFamilies Database</b>, <b>Rainbow Map</b>, <b>EU LGBTIQ Survey III</b>, and the <b>Discrimination in the European Union Survey</b>, this analysis not only highlights disparities in LGBTQ rights and discrimination across Europe but also promotes sustainable practices in open data usage. The accessibility, ongoing updates, and complementary insights from these datasets enable long-term contributions to data-driven advocacy, policy-making, and public awareness, creating a foundation for lasting social impact.</p>
-	
-	</div>
+	  
+		<div class="dataset-block">
+		  <h3>LawsAndFamilies Database</h3>
+		  <p>
+			The database covers 50 years of legal development, focusing on 69 issues, in 21 European countries; it is free and available to access online, enabling researchers, advocacy groups, and policymakers, to utilise this data effectively.
+		  </p>
+		  <p>
+			Despite this however, some issues arise regarding its relevance. Whilst the dataset does provide a historical account, it has not been updated since 2016. This places limitations on its timeliness and ongoing relevance.
+		  </p>
+		  <p>
+			To bridge this gap in our project we utilised the <strong>Rainbow Europe Map</strong> as it provides data from 2024 on 49 European countries.
+		  </p>
+		</div>
+	  
+		<div class="dataset-block">
+		  <h3>Rainbow Europe Map</h3>
+		  <p>
+			When evaluating the dataset's sustainability, we can see it is very sustainable as it updates annually, providing a timeliness account of each country's percentage that monitors current progressions and highlights areas that require attention.
+		  </p>
+		  <p>
+			However, as the Rainbow Map focuses on Legislation, it lacks grassroots-level data, including factors such as LGBTQ+ lived realities and experiences. To bridge this gap we chose to include LGBTQ+ surveys.
+		  </p>
+		</div>
+	  
+		<div class="dataset-block">
+		  <h3>Discrimination Survey (Eurobarometer)</h3>
+		  <p>
+			The Eurobarometer Discrimination Survey is sustainable as it is conducted frequently, providing an up-to-date evaluation of societal attitudes towards LGBTQ+ realities.
+		  </p>
+		  <p>
+			It is free and available to access online, enabling researchers, advocacy groups, and policymakers, to utilise this data effectively. It also promotes greater transparency and accountability regarding LGBTQ+ issues, enabling groups such as NGOs, government bodies, and academics to utilise this data in investigating, addressing, and mitigating these challenges.
+		  </p>
+		</div>
+	  
+		<div class="dataset-block">
+		  <h3>LGBTIQ Survey III</h3>
+		  <p>
+			The EU LGBTIQ Survey III is free and available to access online, providing greater transparency into the lived realities of LGBTQ+ individuals in Europe.
+		  </p>
+		  <p>
+			The dataset could be more sustainable if it was conducted more frequently, as previous surveys were conducted in 2012 and 2019. This would allow for greater insights into the rapidly changing social and political realities of LGBTQ+ individuals and communities.
+		  </p>
+		</div>
+	  
+		<div class="project-note">
+		  <h3>The Project</h3>
+		  
+		  <p>
+			The project <em>Digital Ethics Across Europe</em> will not be actively maintained or updated in the future as it is the final project developed for the "Open Access and Digital Ethics" course within the Digital Humanities and Digital Knowledge Master's Degree (University of Bologna).
+		  </p>
+		</div>
+	  </div>
+	  
 	<div class="content" id="ninthSection">
 		<h2>Licences and credits</h2>
         <p><em>Cover image:</em> <a href="https://inkscape.org/">Inkscape</a>, <a href="https://inkscape.org/it/about/license/">custom licence</a></p>
