fixed opions lables

--- a/index.html
+++ b/index.html
@@ -1748,12 +1748,12 @@
 			<div class="control-row">
 			  <select class="countrydata2" id="public-opinion-select">
 				<option value="discriminationSexualOrientation">In your opinion how widespread is discrimination lesbian, gay and bisexual people in your country?</option>
-				<option value="discriminationTransgender">In your opinion how widespread is discrimination against transgender people in your country?'</option>
-				<option value="discriminationIntersex">In your opinion how widespread is discrimination against intersex people in your country?'r</option>
-				<option value="politicalFigureLGB">In a scale from 1 to 10, how comfortable would you feel having a lesbian, gay or bisexual person in the highest elected political position?</option>
-				<option value="politicalFigureTransgenderOrIntersex">In a scale from 1 to 10, how comfortable would you feel having a transgender or intesex person in the highest elected political position?</option>
-				<option value="workLGB">In a scale from 1 to 10, how comfortable would you feel, if a colleague at work was lesbian, gay or bisexual person?</option>
-				<option value="workTransgenderOrIntersex">In a scale from 1 to 10, how comfortable would you feel, if a colleague at work was transgender or intersex?</option>
+				<option value="discriminationTransgender">In your opinion how widespread is discrimination against transgender people in your country?</option>
+				<option value="discriminationIntersex">In your opinion how widespread is discrimination against intersex people in your country?</option>
+				<option value="politicalFigureLGB">How comfortable would you feel having a lesbian, gay or bisexual person in the highest elected political position?</option>
+				<option value="politicalFigureTransgenderOrIntersex">How comfortable would you feel having a transgender or intesex person in the highest elected political position?</option>
+				<option value="workLGB">How comfortable would you feel, if a colleague at work was lesbian, gay or bisexual person?</option>
+				<option value="workTransgenderOrIntersex">How comfortable would you feel, if a colleague at work was transgender or intersex?</option>
 				<option value="childrenSameSexPartner">Regardless of whether you have children or not, how comfortable you would feel if one of your children was in a love relationship with a person of the same sex as them</option>
 				<option value="childrenTransgenderOrIntersexPartner">Regardless of whether you have children or not, how comfortable you would feel if one of your children was in a love relationship with transgender or intersex person</option>
 				<option value="agreeLGBRigths">To what extent do you agree or disagree with each of the following statement: "Lesbian, gay and bisexual people should have the same rights as heterosexual people (marriage, adoption, parental rights)"</option>
