--- a/index.html
+++ b/index.html
@@ -1293,11 +1293,11 @@
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr  class="table-danger">
 								<td><strong>Modified</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr>
 								<td><strong>Datasets</strong></td>
@@ -1363,11 +1363,11 @@
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr  class="table-warning">
 								<td><strong>Modified</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr>
 								<td><strong>Source</strong></td>
@@ -1452,11 +1452,11 @@
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr  class="table-success">
 								<td><strong>Modified</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr>
 								<td><strong>Source</strong></td>
@@ -1540,11 +1540,11 @@
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr  class="table-primary">
 								<td><strong>Modified</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr>
 								<td><strong>Source</strong></td>
@@ -1564,7 +1564,7 @@
 							</tr>
 							<tr class="table-primary">
 								<td><strong>Spatial</strong></td>
-								<td>European Union</td>
+								<td>Europe</td>
 							</tr>
 							<tr>
 								<td><strong>Licence</strong></td>
@@ -1630,11 +1630,11 @@
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr  class="table-purple">
 								<td><strong>Modified</strong></td>
-								<td>20/01/2025</td>
+								<td>21/01/2025</td>
 							</tr>
 							<tr>
 								<td><strong>Source</strong></td>
@@ -1654,7 +1654,7 @@
 							</tr>
 							<tr class="table-purple">
 								<td><strong>Spatial</strong></td>
-								<td>European Union</td>
+								<td>Europe</td>
 							</tr>
 							<tr>
 								<td><strong>Licence</strong></td>
