--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 									</tr>
 									<tr class="table-warning">
 										<th>Do you release the API (in case you have) with an open</th>
-										<td></td>
+										<td>No API is avaliable	</td>
 										<td>No API is avaliable</td>
 										<td>No API is available</td>
 										<td>No API is avaliable</td>
@@ -1320,7 +1320,7 @@
 							</tr>
 							<tr class="table-danger">
 								<td><strong>Spatial</strong></td>
-								<td>European Union</td>
+								<td>Europe</td>
 							</tr>
 							<tr>
 								<td><strong>Licence</strong></td>
@@ -1387,7 +1387,7 @@
 							</tr>
 							<tr class="table-warning">
 								<td><strong>Spatial</strong></td>
-								<td>European Union</td>
+								<td>Europe</td>
 							</tr>
 							<tr>
 								<td><strong>Licence</strong></td>
@@ -1476,7 +1476,7 @@
 							</tr>
 							<tr class="table-success">
 								<td><strong>Spatial</strong></td>
-								<td>European Union</td>
+								<td>Europe</td>
 							</tr>
 							<tr>
 								<td><strong>Licence</strong></td>
