--- a/index.html
+++ b/index.html
@@ -1359,7 +1359,7 @@
 							</tr>
 							<tr class="table-warning">
 								<td><strong>Creator</strong></td>
-								<td>Giorgia Umana</td>
+								<td>Valentina Bertelli</td>
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
@@ -1536,7 +1536,7 @@
 							</tr>
 							<tr class="table-primary">
 								<td><strong>Creator</strong></td>
-								<td>Alisha Carol Hiscox</td>
+								<td>Valentina Bertelli</td>
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
@@ -1626,7 +1626,7 @@
 							</tr>
 							<tr class="table-purple">
 								<td><strong>Creator</strong></td>
-								<td>Lukas Firantas</td>
+								<td>Valentina Bertelli</td>
 							</tr>
 							<tr>
 								<td><strong>Issued</strong></td>
