--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 					<h3>Quality Analysis</h3>
 					<p>A quality analysis of our source datasets was performed following the <a href="https://docs.italia.it/italia/daf/lg-patrimonio-pubblico/it/stabile/aspettiorg.html#qualita-dei-dati" style="color:red"><em>Italian National Guidelines</em></a> ("Linee guida nazionali per la valorizzazione del patrimonio informativo pubblico") 
 					</p>
-					<p>Four factors have been taken into c0nsideration when analysing data quality:</p>
+					<p>Four factors have been taken into consideration when analysing data quality:</p>
 					<ul>
 						<li><strong>Completeness</strong>, both of the records and the population </li>
 						<li><strong>Accuracy</strong>, both syntactic and semantic</li>
