--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<p><strong>Rainbow Europe</strong></p>
 						<div class="datasetsDivided">
 							<div class="left">
-								<p>ID: DS2</p>
+								<p>ID: DS3</p>
 								<p>Provenience: European Commetee</p>
 								<p>Format: .xlsx, .pdf</p>
 							</div>
@@ -126,7 +126,7 @@
 						<p><strong>EU LGBTIQ Surveys</strong></p>
 						<div class="datasetsDivided">
 							<div class="left">
-								<p>ID: DS3</p>
+								<p>ID: DS2</p>
 								<p>Provenience: European Union Agency for Fundamental Rights
 								</p>
 								<p>Format: .xlsx, .rdf .csv .html</p>
@@ -144,7 +144,7 @@
 						</strong></p>
 						<div class="datasetsDivided">
 							<div class="left">
-								<p>ID: DS3</p>
+								<p>ID: DS4</p>
 								<p>Provenance:  the Institut national d’études démographiques and Leiden University
 								</p>
 								<p>Format: .xls, .pdf</p>
@@ -152,7 +152,7 @@
 							<div class="right">
 								<p>Metadata: Not provided</p>
 								<p>URI: <a href="https://www.lawsandfamilies.eu/en/legal-project/interactive-database/" target="_blank">Database Laws and Families</a></p>
-								<p>License: <a href="https://creativecommons.org/licenses/by/3.0/deed.en" target="_blank">CC BY 3.0</a></p>
+								<p>License: <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a></p>
 							</div>
 						</div>
 						
@@ -176,7 +176,7 @@
 					<h3>Quality Analysis</h3>
 					<p>A quality analysis of our source datasets was performed following the <a href="https://docs.italia.it/italia/daf/lg-patrimonio-pubblico/it/stabile/aspettiorg.html#qualita-dei-dati" style="color:red"><em>Italian National Guidelines</em></a> ("Linee guida nazionali per la valorizzazione del patrimonio informativo pubblico") 
 					</p>
-					<p>Four factors have been taken into c0nsideration when analysing data quality:</p>
+					<p>Four factors have been taken into consideration when analysing data quality:</p>
 					<ul>
 						<li><strong>Completeness</strong>, both of the records and the population </li>
 						<li><strong>Accuracy</strong>, both syntactic and semantic</li>
@@ -363,7 +363,7 @@
 								<tr>
 									<th>If so, is there a law that authorize the PA to release them? Or any other legal basis?</th>
 									<td>Personal data is not released, detailed information is only available in the national agency if controls are necessary</td>
-									<td>Personal data can be released with consent</td>
+									<td>Personal data can be released if the applicant consents to it.</td>
 									<td>No personal data is collected</td>
 									<td>No personal data is collected</td>
 								</tr>
@@ -2052,7 +2052,6 @@
 		<h2>Licences and credits</h2>
         <p><em>Cover image:</em> <a href="https://inkscape.org/">Inkscape</a>, <a href="https://inkscape.org/it/about/license/">custom licence</a></p>
 		<p><em>Charts:</em><a href="https://www.chartjs.org/docs/2.9.4/notes/license.html">Chart.js</a>, open source and available under the <a href="https://opensource.org/license/MIT">MIT license</a></p>
-		<p><em>Source datasets: </em> <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 3.0</a></p>
         <p><em>DEAE datasets: </em> <a href="https://creativecommons.org/licenses/by/4.0/deed.it">CC BY 4.0</a></p> 
 	</div>
 
