--- a/index.html
+++ b/index.html
@@ -2052,6 +2052,7 @@
 		<h2>Licences and credits</h2>
         <p><em>Cover image:</em> <a href="https://inkscape.org/">Inkscape</a>, <a href="https://inkscape.org/it/about/license/">custom licence</a></p>
 		<p><em>Charts:</em><a href="https://www.chartjs.org/docs/2.9.4/notes/license.html">Chart.js</a>, open source and available under the <a href="https://opensource.org/license/MIT">MIT license</a></p>
+		<p><em>Source datasets: </em> <a href="https://creativecommons.org/licenses/by/4.0/deed.it">CC BY 4.0</a></p> 
         <p><em>DEAE datasets: </em> <a href="https://creativecommons.org/licenses/by/4.0/deed.it">CC BY 4.0</a></p> 
 	</div>
 
