--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 					  <a class="dropdown-item" href="#fourthSection">Dataset overview</a>
 					  <a class="dropdown-item" href="#fifthSection">Analysis</a>
 					  <a class="dropdown-item" href="#sixthSection">Catalogue and metadata</a>	
-					  <a class="dropdown-item" href="#visualisationIntro">Visualization</a>				
+					  <a class="dropdown-item" href="#visualisationIntro">Visualization</a>
+					  <a class="dropdown-item" href="#Conclusions">Conclusions</a>								
 					  <a class="dropdown-item" href="#seventhSection">About us</a>
 					  <a class="dropdown-item" href="#eigthSection">Sustainability of the Open Data Analysis</a>
 					  <a class="dropdown-item" href="#ninthSection">Licences and credits</a>
@@ -1953,7 +1954,10 @@
 <div><p> <br> <br> </p></div>
 
 
-
+<div class="content" id="Conclusions">
+	<h2>Conclusions</h2>
+	<p>Our analysis highlights that <strong>discrimination against LGBTQ+ people remains prevalent in Europe today</strong>. From the visualization of data on <strong>marriage and parenting regulations</strong>, a <strong>clear divide between Western and Eastern Europe</strong> emerges, as depicted in our map. Further steps toward inclusivity must be taken by governments to ensure that rainbow families are guaranteed the same rights and opportunities as traditional ones. The <strong> discrimination analysis</strong> reveals that the percentage of people experiencing discrimination in Eastern Europe is slightly higher than in Western countries, but the <strong>disparity is not substantial</strong>, meaning that <strong>discrimination is still a widespread issue</strong>. Public opinion data seems to confirm this divide: Eastern European countries tend to have a more negative view of the LGBTQ+ community. A higher percentage of people in these countries expressed discomfort with having a child in a same-sex relationship and supporting same-sex marriage. It is important to note that when asked about the prevalence of discrimination against LGBTQ+ people in their country, the most common response was that it is fairly widespread, confirming that discrimination persists across Europe. Nevertheless, the overall amount of <strong>answers in support of the LGBTQ+ community</strong> should not be ignored, as they <strong>offer hope for a more inclusive future</strong> and represent encouraging signs of progress.</p>
+</div>
 
 	<div class="content" id="seventhSection">
 		<h2>About Us</h2>
